@@ -958,10 +958,12 @@ public class IncrementalBRTask implements Callable{
       }
       // Send incremental block reports to the Namenode outside the lock
       boolean success = false;
+      final long startTime = Time.monotonicNow();
       try {
         blockReceivedAndDeletedWithRetry(reports.toArray(new StorageReceivedDeletedBlocks[reports.size()]));
         success = true;
       } finally {
+        dn.getMetrics().addIncrementalBlockReport(Time.monotonicNow()-startTime);
         if (!success) {
           synchronized (pendingIncrementalBRperStorage) {
             for (StorageReceivedDeletedBlocks report : reports) {
